<resources>
    <string name="app_name">HomeDecor</string>
    <string name="username">Όνομα Χρήστη</string>
    <string name="password">Κωδικός</string>
    <string name="last_name">Επώνυμο</string>
    <string name="first_name">Όνομα</string>
    <string name="email">Email</string>
    <string name="login">Εισοδος</string>
    <string name="register">Εγγραφη</string>
    <string name="address">Διεύθυνση</string>
    <string name="address_number">Νούμερο</string>
    <string name="postal_code">Τ.Κ.</string>
    <string name="city">Πόλη</string>
    <string name="state">Νομός</string>
    <string name="country">Χώρα</string>
    <string name="phone">Σταθερό</string>
    <string name="mobilePhone">Κινητό</string>
    <string name="remember_me">Αποθήκευση στοιχείων</string>
    <string name="content_description">ImageView</string>
    <string name="message">Μήνυμα:</string>
    <string name="settings">Ρυθμίσεις</string>
    <string name="logout">Αποσύνδεση</string>
    <string name="about_us">Λίγα λόγια..</string>
    <string name="how_to">Οδηγίες</string>
    <string name="default_product_name">Όνομα</string>
    <string name="default_product_price">Τιμή</string>
    <string name="default_product_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="default_product_short_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed</string>
    <string name="buy_now">Αγορα</string>
    <string name="add_to_cart">Προσθηκη στο καλαθι</string>
    <string name="products">Προϊόντα</string>
    <string name="productDetails">Προϊόν</string>
    <string name="cart">Καλάθι</string>
    <string name="title_activity_cart">Καλάθι</string>
    <string name="chat">Συνομιλία</string>
    <string name="category">Κατηγορία</string>
    <string name="checkoutDialog_title">Αγορά ως..</string>
    <string name="noAccount_goToRegister">Δεν έχετε λογαριασμό; Εγγραφή εδώ</string>

    <string-array name="product_filters_category">
        <item>Κατηγορία</item>
        <item>Γραφείο</item>
        <item>Καθιστικό</item>
        <item>Υπνοδωμάτιο</item>
    </string-array>

    <string-array name="product_filters_subCategory_desk">
        <item>Υποκατηγορία</item>
        <item>Αποθήκευση γραφείου</item>
        <item>Γραφεία</item>
        <item>Καρέκλες γραφείου</item>
    </string-array>

    <string-array name="product_filters_subCategory_livingRoom">
        <item>Υποκατηγορία</item>
        <item>Έπιπλα τηλεόρασης</item>
        <item>Καναπέδες</item>
        <item>Τραπέζια σαλονιού</item>
    </string-array>

    <string-array name="product_filters_subCategory_bedroom">
        <item>Υποκατηγορία</item>
        <item>Κρεβάτια</item>
        <item>Ντουλάπες</item>
        <item>Συρταριέρες αποθήκευσης</item>
    </string-array>

</resources>
